# infoSecDocs

./: .gitignore  .gitlab-ci.yml  Dockerfile  README.md  README_to_ADD_Runner.md  entrypoint.sh  env  mkdocs.yml  pyproject.toml
_deploy/: infosec.esu.gsp.local.conf
docs/: .pages  contacts.md
docs/assets/fonts/PT-Astra-Serif/bold/: pt-astra-serif_bold.eot
docs/assets/fonts/PT-Astra-Serif/bold-italic/: pt-astra-serif_bold-italic.eot
docs/assets/fonts/PT-Astra-Serif/italic/: pt-astra-serif_italic.eot
docs/assets/fonts/PT-Astra-Serif/regular/: pt-astra-serif_regular.eot
docs/assets/fonts/PT-Mono/bold/: pt-mono_bold.eot
docs/assets/fonts/PT-Mono/regular/: pt-mono_regular.eot
docs/assets/fonts/PT-Root-UI/bold/: pt-root-ui_bold.eot
docs/assets/fonts/PT-Root-UI/light/: pt-root-ui_light.eot
docs/assets/fonts/PT-Root-UI/medium/: pt-root-ui_medium.eot
docs/assets/fonts/PT-Root-UI/regular/: pt-root-ui_regular.eot
docs/assets/fonts/PT-Root-UI/vf/: pt-root-ui_vf.eot
docs/assets/scripts/: feedback.livechat.js
docs/assets/stylesheets/: custom.css  fonts.css
docs/cis/: index.md
docs/ism/: .pages  home.md
docs/ism/instructions/: .pages  instructions_password_protection.md
docs/ism/politics/: .pages  information_security_policy.md  information_security_policy_of_automated_process_control_systems.md  politic_ACSC.md  politic_CS.md
docs/ism/regulations/: .pages  regulations_for_vulnerability_management_and_monitoring_of_updates_to_automated_systems.md  regulations_on_expert_commissions_for_the_evaluation_of_information_resources.md  vulnerability_management_regulations.md
docs/pdp/: .pages  description_pdp.md  personal_data_processing_policy.md  personal_data_processing_regulation_PDP.md  policy_PDP.md
docs/pots/: .pages  description_pots.md  instructions_for_working_with_confidential_documents.md  instructions_on_the_transfer_of_information_to_government_and_contractors.md  list_of_confidential_information.md  regulation_of_commercial_secrecy.md
docs/pts/: .pages  instructions_on_the_transfer_of_information_to_government_and_contractors.md  list_of_confidential_information.md  regulation_of_commercial_secrecy.md
mkdocs_text_handlers/: plugin.py
overrides/: main.html
overrides/partials/: header.html  logo.html
resources_to_PDF/: .dockerignore  .gitattributes  .gitlab-ci.yml.old  Dockerfile.old  mkdocs.yml  pyproject.toml
resources_to_PDF/covers/: back.html.j2  back.html.j2.old  front-ESKD.html.j2  front-modern.html.j2  front.html.j2
resources_to_PDF/stylesheets/: pdf-GOST.scss  pdf-book.scss  pdf.scss  pdf.scss.old
