[build-system]
requires = ["poetry-core>=2.1.3"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "NonBreakingSpace"
version = "1.0.1"
repository = "https://git.gsp.local/cyberSecurity/docsite"
keywords = ["mkdocs", "pdf", "html", "Russian Language"]
description = "A plugin that ensures the implementation of the rules of the Russian language in part, correcting hanging lines"
authors = ["Mike Petrov <msp@netgroup.su>"]

classifiers = [
  "License :: OSI Approved :: Apache License 2.0 ",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Topic :: Documentation",
  "Topic :: GOST :: Documentation",
  "Topic :: Text Processing :: Markup :: HTML",
]

packages = [{include = "mkdocs_text_handlers"}]

[tool.poetry.dependencies]
mkdocs-exporter = "^6.2.0"
python = ">=3.9,<4"
mkdocs = ">=1.6"
playwright = ">=1.54"
beautifulsoup4 = ">=4.13.4"
lxml = ">=6.0.0"
libsass = ">=0.23.0"
pypdf = ">=5.8.0"

[tool.poetry.plugins."mkdocs.plugins"]
"exporter" = "mkdocs_exporter.plugin:Plugin"
"NonBreakingSpace" = "mkdocs_text_handlers.plugin:NonBreakingSpacePlugin"

[tool.poetry.urls]
"Bug Tracker" = "https://git.gsp.local/msp/docsite/issues"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.3.0"
mkdocs-material = {version="^9.6.15", extras=["imaging"]}
mkdocs-git-revision-date-localized-plugin = "^1.4.7"
mkdocs-awesome-pages-plugin = "^2.10.1"
mkdocs-macros-plugin = "^1.3.7"
mkdocs-minify-plugin = "^0.8.0"
mkdocs-redirects = "^1.2.2"
mdx-truly-sane-lists = "^1.3"
mkdocstrings = {extras = ["python"], version = "^0.30.0"}
mkdocs-git-committers-plugin-2 = "^2.3.0"
bandit = "^1.8.6"
